Closed Bug 1255384 Opened 9 years ago Closed 7 years ago

inIDOMUtils.getCSSValuesForProperty() is missing keyword for counter-* properties

Categories

(Core :: CSS Parsing and Computation, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla59
Tracking Status
firefox59 --- verified

People

(Reporter: sebo, Assigned: tromey)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

The 'counter-increment' and 'counter-reset' properties are missing the 'none' keyword. Test case (to execute in Scratchpad): let DOMUtils = Cc["@mozilla.org/inspector/dom-utils;1"].getService(Ci.inIDOMUtils); let names = ["counter-increment", "counter-reset"]; for (let name of names) { console.log(DOMUtils.getCSSValuesForProperty(name)); } Sebastian
Assignee: nobody → ttromey
Forgot to rebuild the db after the last change.
Attachment #8941967 - Flags: review?(cam) → review+
Rebasing.
Pushed by ttromey@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/de312c964b3a fix getCSSValuesForProperty for counter-*; r=heycam
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Works fine for me on Nightly 2018-01-14. Again, thank you for the patch, Tom! Sebastian
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: