Bug 1255384 - fix getCSSValuesForProperty for counter-*; r=heycam

This bug notes that getCSSValuesForProperty does not mention the
"none" value for counter-increment and counter-reset.  This fixes the
problem by mentioning the variants in the entries in nsCSSPropList.h.

MozReview-Commit-ID: HpZIMIIejHc