layout/style/nsCSSPropList.h
@@ -1652,7 +1652,7 @@ CSS_PROP_CONTENT(
     CounterIncrement,
     CSS_PROPERTY_PARSE_FUNCTION,
     "",
-    0,
+    VARIANT_INHERIT | VARIANT_NONE,
     nullptr,
     CSS_PROP_NO_OFFSET,
     eStyleAnimType_Discrete) // XXX bug 137285
@@ -1662,7 +1662,7 @@ CSS_PROP_CONTENT(
     CounterReset,
     CSS_PROPERTY_PARSE_FUNCTION,
     "",
-    0,
+    VARIANT_INHERIT | VARIANT_NONE,
     nullptr,
     CSS_PROP_NO_OFFSET,
     eStyleAnimType_Discrete) // XXX bug 137285
